--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -13,7 +13,7 @@
 }
 
 html {
-    background-color: #000;
+    background-color: #fff;
     font-size: 10px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -46,7 +46,7 @@ button {
     top: 0;
     left: 0;
     position: fixed;
-    background-color: rgb(0, 0, 0);
+    background-color: #fff;
     z-index: 10000000;
     text-align: center;
     display: flex;
@@ -55,10 +55,8 @@ button {
 }
 
 #loading-image {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
+    width: 250px;
+    height: 250px;
     z-index: 100;
 }
 
