--- a/css/responsive.css
+++ b/css/responsive.css
@@ -46,6 +46,22 @@
         margin-left: 3em;
     }
 
+    header .container .nav-link {
+        font-size: 1.65em;
+    }
+
+    .home-info-subtitle {
+        font-size: 2.25em;
+    }
+
+    .music-player .music-name {
+        font-size: 1.5em;
+    }
+
+    .check-my-work {
+        font-size: 1.25em;
+    }
+
     .project-card,
     .project-card:nth-child(even) {
         flex-direction: column;
@@ -54,8 +70,12 @@
 
     .project-info {
         width: 100%;
-        height: 15em;
+        height: 22.5em;
         margin-bottom: 4em;
+    }
+
+    .project-name {
+        font-size: 3.5em;
     }
 
     .project-img {
@@ -63,8 +83,28 @@
         height: 35em;
     }
 
+    .project-description {
+        font-size: 1.75em;
+    }
+
+    .project-info-tag {
+        width: 25em;
+    }
+
+    .project-info-btn {
+        font-size: 1.5em;
+    }
+
+    .info-tag {
+        font-size: 1.5em;
+    }
+
     .works-group {
         flex-direction: column;
+    }
+
+    .work-name {
+        font-size: 2em;
     }
 
     .work-card-collumn {
@@ -80,6 +120,29 @@
     .section.about-me .container,
     .section.contact .container {
         width: 100%;
+    }
+
+    .section.contact .container {
+        height: 17.5em;
+    }
+
+    .contact-icon {
+        width: 2em;
+        height: 2em;
+        font-size: 3.5em;
+    }
+
+    .about-me-decription,
+    .contact-description {
+        font-size: 1.75em;
+    }
+
+    .about-link {
+        font-size: 1.75rem;
+    }
+
+    .copyright {
+        font-size: 1.25em;
     }
 }
 
@@ -103,7 +166,7 @@
     }
 
     header .container .nav-bar {
-        width: 30em;
+        width: 35em;
     }
 
     section .container,
@@ -139,6 +202,10 @@
         font-size: 3.3em;
     }
 
+    .project-info {
+        height: 24em;
+    }
+
     .project-img {
         height: 30em;
     }
@@ -150,5 +217,9 @@
 
     .back-to-top {
         right: 5em;
+    }
+
+    .section.contact .container {
+        height: 23em;
     }
 }
