--- a/css/responsive.css
+++ b/css/responsive.css
@@ -132,7 +132,7 @@
         font-size: 3.5em;
     }
 
-    .about-me-decription,
+    .about-me-description,
     .contact-description {
         font-size: 1.75em;
     }
@@ -166,7 +166,7 @@
     }
 
     header .container .nav-bar {
-        width: 35em;
+        width: 40em;
     }
 
     section .container,
