--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,7 @@
 @import url('portfolio.css');
 @import url('other-works.css');
 @import url('about-me.css');
+@import url('contact.css');
 @import url('footer.css');
+@import url('dark-mode.css');
 @import url('responsive.css');
