add pre-load effect

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -449,6 +449,26 @@ h3 {
   }
 }
 
+#loading {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fff;
+  z-index: 100;
+}
+
 .wrapper {
   background-color: #000;
   display: -webkit-box;
