--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -3,6 +3,7 @@
 @import "./project-tooltip";
 @import "./project-modal";
 @import "./mobile-menu";
+@import "./loading";
 
 .wrapper {
     background-color: #000;
