--- a/assets/css/_description-modal.scss
+++ b/assets/css/_description-modal.scss
@@ -45,12 +45,20 @@
                         margin-top: 40px;
                         margin-bottom: 40px;
                     }
+
+                    @media (max-width: 576px) {
+                        font-size: 32px;
+                    }
                 }
 
                 &__info {
                     .info-name {
                         font-size: 20px;
                         margin-bottom: 10px;
+
+                        @media (max-width: 576px) {
+                            font-size: 18px;
+                        }
                     }
                     .info-year {
                         font-weight: 500;
@@ -102,6 +110,9 @@
                 @media (max-width: 768px) {
                     margin-bottom: 40px;
                 }
+                @media (max-width: 576px) {
+                    font-size: 32px;
+                }
             }
             .certificates {
                 display: grid;
@@ -148,6 +159,6 @@
     }
 
     @media (max-width: 992px) {
-        padding: 100px 20px;
+        padding: 80px 20px;
     }
 }
