--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -7,6 +7,12 @@
     font-family: "Montserrat", sans-serif;
     list-style: none;
     text-decoration: none;
+
+    @media (max-width: 768px) {
+        ::-webkit-scrollbar {
+            display: none;
+        }
+    }
 }
 
 body {
