--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -31,6 +31,11 @@
                 max-width: 200px;
                 height: 200px;
             }
+
+            @media (max-width: 476px) {
+                max-width: 180px;
+                height: 180px;
+            }
         }
 
         &-details {
@@ -46,6 +51,10 @@
                 @media (max-width: 768px) {
                     font-size: 45px;
                     text-align: center;
+                }
+
+                @media (max-width: 476px) {
+                    font-size: 35px;
                 }
             }
 
@@ -79,6 +88,9 @@
                         }
                     }
                 }
+                @media (max-width: 476px) {
+                    margin-bottom: 20px;
+                }
             }
 
             @media (max-width: 992px) {
@@ -91,5 +103,14 @@
             flex-direction: column;
             align-items: center;
         }
+    }
+
+    @media (max-width: 1200px) {
+        transform: translateY(60px);
+        padding: 20px 50px;
+    }
+
+    @media (max-width: 992px) {
+        padding: 20px 0;
     }
 }
