--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -4,6 +4,7 @@
 @import "./project-modal";
 @import "./mobile-menu";
 @import "./loading";
+@import "./preload";
 
 .wrapper {
     background-color: #000;
