--- a/PROJECTS/LOOPSTUDIOS-PAGE/stylesheets/section1.css
+++ b/PROJECTS/LOOPSTUDIOS-PAGE/stylesheets/section1.css
@@ -1,7 +1,7 @@
 section:nth-child(1) {
     height: 100vh;
     width: 100%;
-    background: url('https://media1.tenor.com/images/41d8937cb1ff1d5947b3f01cb64641e5/tenor.gif?itemid=15164944') center no-repeat;
+    background: url('https://media.giphy.com/media/Tg73hschtYUZ19yTd0/giphy.gif') center no-repeat;
     background-size: cover;
     position: relative;
 }
@@ -36,6 +36,7 @@ section:nth-child(1) {
     0% {
         transform: scaleX(0);
     }
+
     25%,
     100% {
         transform: scaleX(1);
@@ -46,6 +47,7 @@ section:nth-child(1) {
     25% {
         transform: scaleY(0);
     }
+
     50%,
     100% {
         transform: scaleY(1);
@@ -56,6 +58,7 @@ section:nth-child(1) {
     0% {
         transform: scaleX(0);
     }
+
     25%,
     100% {
         transform: scaleX(1);
@@ -66,6 +69,7 @@ section:nth-child(1) {
     25% {
         transform: scaleY(0);
     }
+
     50%,
     100% {
         transform: scaleY(1);
