--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -19,6 +19,38 @@ body {
     overflow-x: hidden;
 }
 
+body.dark-mode {
+    filter: invert(1) hue-rotate(180deg);
+
+    img,
+    .home__content-avt,
+    iframe {
+        filter: invert(1) hue-rotate(180deg) grayscale(100%) !important;
+    }
+
+    .project-modal iframe {
+        filter: invert(1) hue-rotate(180deg) !important;
+    }
+
+    .contact__map iframe {
+        filter: invert(1) hue-rotate(180deg) !important;
+    }
+
+    .description-modal {
+        img {
+            filter: invert(1) hue-rotate(180deg) !important;
+        }
+    }
+}
+
+.button-darkmode {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
+    cursor: pointer;
+}
+
 p {
     font-size: 15px;
     color: #767676;
@@ -30,17 +62,22 @@ h3 {
 
 .button {
     text-decoration: none;
+    text-align: center;
     color: #fff;
     display: inline-block;
     background-color: #000;
-    padding: 20px 40px;
+    padding: 20px 0px;
+    min-width: 185px;
     font-style: italic;
     cursor: pointer;
     transition: all 0.25s ease-in-out;
-    letter-spacing: 1.5px;
+    letter-spacing: 1.25px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 
     &:hover {
-        letter-spacing: 3px;
+        background-color: #767676;
+        color: #fff;
     }
 
     @media (max-width: 476px) {
