--- a/assets/css/_left-part.scss
+++ b/assets/css/_left-part.scss
@@ -26,11 +26,44 @@
         &-menu {
             min-height: 150px;
             .menu-list {
-                height: 100%;
+                height: 180px;
                 width: 100%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
+
+                .button-darkmode-switch {
+                    background-color: transparent;
+                    outline: none;
+                    border: none;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    flex-wrap: nowrap;
+                    width: 90px;
+                    height: 25px;
+                    cursor: pointer;
+                    .button-darkmode-tray {
+                        height: 25px;
+                        width: 50px;
+                        background-color: #fff;
+                        border-radius: 50px;
+                        border: 1px solid #000;
+                        .button-darkmode-switcher {
+                            width: 24px;
+                            height: 24px;
+                            background-color: #000;
+                            border-radius: 50px;
+                            transition: transform 0.15s ease-in-out;
+                        }
+                        &.on {
+                            .button-darkmode-switcher {
+                                transform: translateX(100%);
+                            }
+                        }
+                    }
+                }
 
                 &__item {
                     .item-link {
