--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -19,6 +19,41 @@ body {
   overflow-x: hidden;
 }
 
+body.dark-mode {
+  -webkit-filter: invert(1) hue-rotate(180deg);
+          filter: invert(1) hue-rotate(180deg);
+}
+
+body.dark-mode img,
+body.dark-mode .home__content-avt,
+body.dark-mode iframe {
+  -webkit-filter: invert(1) hue-rotate(180deg) grayscale(100%) !important;
+          filter: invert(1) hue-rotate(180deg) grayscale(100%) !important;
+}
+
+body.dark-mode .project-modal iframe {
+  -webkit-filter: invert(1) hue-rotate(180deg) !important;
+          filter: invert(1) hue-rotate(180deg) !important;
+}
+
+body.dark-mode .contact__map iframe {
+  -webkit-filter: invert(1) hue-rotate(180deg) !important;
+          filter: invert(1) hue-rotate(180deg) !important;
+}
+
+body.dark-mode .description-modal img {
+  -webkit-filter: invert(1) hue-rotate(180deg) !important;
+          filter: invert(1) hue-rotate(180deg) !important;
+}
+
+.button-darkmode {
+  outline: none;
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 p {
   font-size: 15px;
   color: #767676;
@@ -30,19 +65,24 @@ h3 {
 
 .button {
   text-decoration: none;
+  text-align: center;
   color: #fff;
   display: inline-block;
   background-color: #000;
-  padding: 20px 40px;
+  padding: 20px 0px;
+  min-width: 185px;
   font-style: italic;
   cursor: pointer;
   -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.25px;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .button:hover {
-  letter-spacing: 3px;
+  background-color: #767676;
+  color: #fff;
 }
 
 @media (max-width: 476px) {
@@ -324,6 +364,12 @@ h3 {
   z-index: 1000;
 }
 
+@media (max-width: 768px) {
+  .project-tooltip {
+    display: none;
+  }
+}
+
 .project-modal {
   position: absolute;
   top: 0;
@@ -463,6 +509,12 @@ h3 {
   color: #767676;
 }
 
+@media (max-width: 576px) {
+  .mobile-menu__inner-menu .menu-list__item {
+    margin-left: 10px;
+  }
+}
+
 .mobile-menu__inner-menu .menu-list__item:first-child a {
   font-size: 20px;
 }
@@ -496,7 +548,82 @@ h3 {
       -ms-flex-align: center;
           align-items: center;
   background-color: #fff;
+  z-index: 101;
+}
+
+.preload {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+  pointer-events: none;
   z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.preload .left {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #000;
+  -webkit-transition: -webkit-transform 0.5s 1s ease-in-out;
+  transition: -webkit-transform 0.5s 1s ease-in-out;
+  transition: transform 0.5s 1s ease-in-out;
+  transition: transform 0.5s 1s ease-in-out, -webkit-transform 0.5s 1s ease-in-out;
+}
+
+.preload .middle {
+  width: 3px;
+  height: 100%;
+  background-color: #fff;
+  -webkit-transform: scaleY(0.3);
+          transform: scaleY(0.3);
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+
+.preload .right {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #000;
+  -webkit-transition: -webkit-transform 0.5s 1s ease-in-out;
+  transition: -webkit-transform 0.5s 1s ease-in-out;
+  transition: transform 0.5s 1s ease-in-out;
+  transition: transform 0.5s 1s ease-in-out, -webkit-transform 0.5s 1s ease-in-out;
+}
+
+.preload.active .left {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+
+.preload.active .middle {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+  opacity: 0;
+}
+
+.preload.active .right {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
 }
 
 .wrapper {
@@ -556,7 +683,7 @@ h3 {
 }
 
 .wrapper .left-part__inner-menu .menu-list {
-  height: 100%;
+  height: 180px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -568,6 +695,54 @@ h3 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.wrapper .left-part__inner-menu .menu-list .button-darkmode-switch {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  width: 90px;
+  height: 25px;
+  cursor: pointer;
+}
+
+.wrapper .left-part__inner-menu .menu-list .button-darkmode-switch .button-darkmode-tray {
+  height: 25px;
+  width: 50px;
+  background-color: #fff;
+  border-radius: 50px;
+  border: 1px solid #000;
+}
+
+.wrapper .left-part__inner-menu .menu-list .button-darkmode-switch .button-darkmode-tray .button-darkmode-switcher {
+  width: 24px;
+  height: 24px;
+  background-color: #000;
+  border-radius: 50px;
+  -webkit-transition: -webkit-transform 0.15s ease-in-out;
+  transition: -webkit-transform 0.15s ease-in-out;
+  transition: transform 0.15s ease-in-out;
+  transition: transform 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+}
+
+.wrapper .left-part__inner-menu .menu-list .button-darkmode-switch .button-darkmode-tray.on .button-darkmode-switcher {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
 }
 
 .wrapper .left-part__inner-menu .menu-list__item .item-link {
@@ -608,6 +783,10 @@ h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -616,6 +795,57 @@ h3 {
           align-items: center;
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.wrapper .right-part .home .music-player {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: transparent;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 125px;
+  height: 60px;
+  bottom: 60px;
+  right: 60px;
+  position: fixed;
+  cursor: pointer;
+  z-index: 10;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.wrapper .right-part .home .music-player #canvas {
+  z-index: 2;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 992px) {
+  .wrapper .right-part .home .music-player {
+    margin: 20px 0;
+    width: 150px;
+    position: initial;
+    bottom: initial;
+    right: initial;
+  }
+}
+
+.wrapper .right-part .home .music-player.pause {
+  background: url("https://img.icons8.com/small/96/000000/soundcloud.png") center no-repeat;
+  background-size: contain;
+}
+
+@media (max-width: 768px) {
+  .wrapper .right-part .home .music-player {
+    display: none;
+  }
 }
 
 .wrapper .right-part .home__content {
@@ -629,23 +859,50 @@ h3 {
 }
 
 .wrapper .right-part .home__content-avt {
-  max-width: 200px;
-  height: 200px;
-}
-
-.wrapper .right-part .home__content-avt img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  background: url("../../images/avt.webp") center no-repeat;
+  background-size: cover;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
-  border-radius: 50%;
+  -webkit-animation: morph 8s ease-in-out infinite;
+          animation: morph 8s ease-in-out infinite;
+  border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 200px;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  width: 200px;
+  z-index: 5;
+  outline: none;
+}
+
+@-webkit-keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  }
+}
+
+@keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  }
 }
 
 @media (max-width: 992px) {
   .wrapper .right-part .home__content-avt {
-    max-width: 300px;
+    width: 300px;
     height: 300px;
     margin-bottom: 50px;
   }
@@ -653,14 +910,14 @@ h3 {
 
 @media (max-width: 768px) {
   .wrapper .right-part .home__content-avt {
-    max-width: 200px;
+    width: 200px;
     height: 200px;
   }
 }
 
 @media (max-width: 476px) {
   .wrapper .right-part .home__content-avt {
-    max-width: 180px;
+    width: 180px;
     height: 180px;
   }
 }
@@ -735,6 +992,20 @@ h3 {
   color: #767676;
 }
 
+@media (max-width: 992px) {
+  .wrapper .right-part .home__content-details__social ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .wrapper .right-part .home__content-details__social ul li {
+    margin: 0 10px;
+  }
+}
+
 @media (max-width: 476px) {
   .wrapper .right-part .home__content-details__social {
     margin-bottom: 20px;
@@ -766,7 +1037,7 @@ h3 {
   .wrapper .right-part .home {
     -webkit-transform: translateY(60px);
             transform: translateY(60px);
-    padding: 20px 50px;
+    padding: 20px 20px;
   }
 }
 
