fixed margin + padding problem

--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -87,8 +87,7 @@
     }
 
     @media (max-width: 1200px) {
-        transform: translateY(60px);
-        padding: 20px 50px;
+        padding: 0 50px;
     }
 
     @media (max-width: 992px) {
