--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -15,6 +15,14 @@
     }
 }
 
+html {
+    @media (max-width: 1200px) {
+        &::-webkit-scrollbar {
+            display: none;
+        }
+    }
+}
+
 body {
     overflow-x: hidden;
 }
