--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -49,8 +49,7 @@
     }
 
     @media (max-width: 1200px) {
-        transform: translateY(60px);
-        padding: 20px 40px;
+        padding: 0 40px;
     }
 
     @media (max-width: 992px) {
