--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -85,8 +85,8 @@
             }
 
             @media (max-width: 476px) {
-                width: 180px;
-                height: 180px;
+                width: 140px;
+                height: 140px;
             }
         }
 
@@ -106,7 +106,7 @@
                 }
 
                 @media (max-width: 476px) {
-                    font-size: 35px;
+                    font-size: 32.5px;
                 }
             }
 
@@ -167,11 +167,10 @@
     }
 
     @media (max-width: 1200px) {
-        transform: translateY(60px);
-        padding: 20px 20px;
+        padding: 0px 20px;
     }
 
     @media (max-width: 992px) {
-        padding: 20px 0;
+        padding: 0 0;
     }
 }
