--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -70,11 +70,13 @@
                     overflow: hidden;
                     cursor: pointer;
                     box-shadow: 0px 0px 5px 2px #c9c9c9;
+                    background-color: #000;
 
                     img,
                     iframe {
                         width: 100%;
                         height: 100%;
+                        background-color: #000;
                         object-fit: cover;
                         filter: grayscale(100%);
                         transition: transform 0.25s ease-in-out;
