--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1312,12 +1312,14 @@ h3 {
   cursor: pointer;
   -webkit-box-shadow: 0px 0px 5px 2px #c9c9c9;
           box-shadow: 0px 0px 5px 2px #c9c9c9;
+  background-color: #000;
 }
 
 .wrapper .right-part .portfolio__galery-list li div img,
 .wrapper .right-part .portfolio__galery-list li div iframe {
   width: 100%;
   height: 100%;
+  background-color: #000;
   -o-object-fit: cover;
      object-fit: cover;
   -webkit-filter: grayscale(100%);
