--- a/assets/css/_left-part.scss
+++ b/assets/css/_left-part.scss
@@ -59,7 +59,7 @@
                         }
                         &.on {
                             .button-darkmode-switcher {
-                                transform: translateX(100%);
+                                transform: translateX(25px);
                                 box-shadow: 0 0 12.5px 4px #000;
                             }
                         }
