--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -70,13 +70,14 @@
                     overflow: hidden;
                     cursor: pointer;
                     box-shadow: 0px 0px 5px 2px #c9c9c9;
-                    background-color: #000;
+                    background-color: #fff;
+                    overflow: hidden;
 
                     img,
                     iframe {
                         width: 100%;
                         height: 100%;
-                        background-color: #000;
+                        background-color: #fff;
                         object-fit: cover;
                         filter: grayscale(100%);
                         transition: transform 0.25s ease-in-out;
@@ -102,35 +103,38 @@
                         height: 100%;
                     }
                 }
-                #documentation-page:hover {
-                    content: url(../../images/documentationPageGIF.gif);
-                }
-                #room-homepage:hover {
-                    content: url(../../images/roomPageGIF.gif);
-                }
-                #loopstudio-page:hover {
-                    content: url(../../images/VRPageGIF.gif);
-                }
-                #meme-generator:hover {
-                    content: url(../../images/memeGenGIF.gif);
-                }
-                #paint:hover {
-                    content: url(../../images/paintGIF.gif);
-                }
-                #bad-apple:hover {
-                    content: url(../../images/badAppleGIF.gif);
-                }
-                #weather-forecast:hover {
-                    content: url(../../images/weatherForecastGIF.gif);
-                }
-                #calculator:hover {
-                    content: url(../../images/calculatorGIF.gif);
-                }
-                #hangman:hover {
-                    content: url(../../images/hangmanGIF.gif);
-                }
-                #flappy-bird:hover {
-                    content: url(../../images/flappyGIF.gif);
+
+                @media (min-width: 993px) {
+                    #documentation-page:hover {
+                        content: url(../../images/documentationPageGIF.gif);
+                    }
+                    #room-homepage:hover {
+                        content: url(../../images/roomPageGIF.gif);
+                    }
+                    #loopstudio-page:hover {
+                        content: url(../../images/VRPageGIF.gif);
+                    }
+                    #meme-generator:hover {
+                        content: url(../../images/memeGenGIF.gif);
+                    }
+                    #paint:hover {
+                        content: url(../../images/paintGIF.gif);
+                    }
+                    #bad-apple:hover {
+                        content: url(../../images/badAppleGIF.gif);
+                    }
+                    #weather-forecast:hover {
+                        content: url(../../images/weatherForecastGIF.gif);
+                    }
+                    #calculator:hover {
+                        content: url(../../images/calculatorGIF.gif);
+                    }
+                    #hangman:hover {
+                        content: url(../../images/hangmanGIF.gif);
+                    }
+                    #flappy-bird:hover {
+                        content: url(../../images/flappyGIF.gif);
+                    }
                 }
             }
 
