--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -73,26 +73,13 @@
                     background-color: #fff;
                     overflow: hidden;
 
-                    img,
-                    iframe {
+                    img {
                         width: 100%;
                         height: 100%;
                         background-color: #fff;
                         object-fit: cover;
                         filter: grayscale(100%);
                         transition: transform 0.25s ease-in-out;
-                    }
-
-                    iframe {
-                        @media (max-width: 992px) {
-                            height: 325px;
-                        }
-                        @media (max-width: 768px) {
-                            height: 275px;
-                        }
-                        @media (max-width: 512px) {
-                            height: 225px;
-                        }
                     }
 
                     @media (max-width: 1400px) {
@@ -134,6 +121,15 @@
                     }
                     #flappy-bird:hover {
                         content: url(../../images/flappyGIF.gif);
+                    }
+                    #social-responsibility:hover {
+                        content: url(../../images/social-responsibilityGIF.gif);
+                    }
+                    #snake-the-game:hover {
+                        content: url(../../images/snake-the-gameGIF.gif);
+                    }
+                    #flappy-bird-youtube:hover {
+                        content: url(../../images/flappy-bird-youtubeGIF.gif);
                     }
                 }
             }
