--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -9,7 +9,9 @@
         &-img {
             width: 100%;
             height: 100%;
+            -o-object-fit: cover;
             object-fit: cover;
+            -webkit-filter: grayscale(100%);
             filter: grayscale(100%);
         }
 
