--- a/assets/css/_project-tooltip.css
+++ b/assets/css/_project-tooltip.css
@@ -1,1 +1,8 @@
-.project-tooltip{position:absolute;z-index:9;padding:5px 10px;background-color:transparent;color:#000;z-index:1000}
+.project-tooltip {
+    position: absolute;
+    z-index: 9;
+    padding: 5px 10px;
+    background-color: transparent;
+    color: #000;
+    z-index: 1000
+}
