--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -7,42 +7,6 @@
     height: 100%;
     position: relative;
 
-    .music-player {
-        display: flex;
-        justify-content: center;
-        background: transparent;
-        align-items: center;
-        width: 125px;
-        height: 60px;
-        bottom: 60px;
-        right: 60px;
-        position: fixed;
-        cursor: pointer;
-        z-index: 10;
-        transition: all 0.25s ease-in-out;
-        #canvas {
-            z-index: 2;
-            display: inline-block;
-            width: 100%;
-            height: 100%;
-        }
-        @media (max-width: 992px) {
-            margin: 20px 0;
-            width: 150px;
-            position: initial;
-            bottom: initial;
-            right: initial;
-        }
-        &.pause {
-            background: url("https://img.icons8.com/small/96/000000/soundcloud.png")
-                center no-repeat;
-            background-size: contain;
-        }
-        @media (max-width: 768px) {
-            display: none;
-        }
-    }
-
     &__content {
         display: flex;
         flex-direction: row;
@@ -50,8 +14,10 @@
         &-avt {
             background: url("../../images/avt.webp") center no-repeat;
             background-size: cover;
-            filter: grayscale(100%);
-            animation: morph 8s ease-in-out infinite;
+            -webkit-filter: grayscale(100%);
+                    filter: grayscale(100%);
+            -webkit-animation: morph 8s ease-in-out infinite;
+                    animation: morph 8s ease-in-out infinite;
             border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
             box-sizing: border-box;
             height: 200px;
@@ -59,6 +25,19 @@
             width: 200px;
             z-index: 5;
             outline: none;
+            @-webkit-keyframes morph {
+                0% {
+                    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+                }
+
+                50% {
+                    border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+                }
+
+                100% {
+                    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+                }
+            }
             @keyframes morph {
                 0% {
                     border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
