--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -50,7 +50,9 @@
         &-avt {
             background: url("../../images/avt.webp") center no-repeat;
             background-size: cover;
+            -webkit-filter: grayscale(100%);
             filter: grayscale(100%);
+            -webkit-animation: morph 8s ease-in-out infinite;
             animation: morph 8s ease-in-out infinite;
             border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
             box-sizing: border-box;
@@ -59,6 +61,19 @@
             width: 200px;
             z-index: 5;
             outline: none;
+            @-webkit-keyframes morph {
+                0% {
+                    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+                }
+
+                50% {
+                    border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+                }
+
+                100% {
+                    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+                }
+            }
             @keyframes morph {
                 0% {
                     border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
