--- a/assets/css/_project-modal.scss
+++ b/assets/css/_project-modal.scss
@@ -14,6 +14,8 @@
     padding: 50px 100px;
     border: none;
     outline: none;
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 
     &__iframe {
         position: relative;
