--- a/PROJECTS/DOCUMENTATION PAGE/assets/css/_menu-bar.scss
+++ b/PROJECTS/DOCUMENTATION PAGE/assets/css/_menu-bar.scss
@@ -49,6 +49,7 @@
             }
             span {
                 display: inline-block;
+                color: #000;
                 @media (max-width: 576px) {
                     display: none;
                 }
