--- a/PROJECTS/DOCUMENTATION PAGE/assets/css/_contribution.scss
+++ b/PROJECTS/DOCUMENTATION PAGE/assets/css/_contribution.scss
@@ -24,7 +24,7 @@
         }
 
         &-left {
-            width: 50%;
+            width: 48%;
             @media (max-width: 1200px) {
                 width: 100%;
                 margin-bottom: 60px;
@@ -33,7 +33,7 @@
                 margin-bottom: 40px;
             }
             h3 {
-                min-width: 142.5%;
+                min-width: 100%;
                 display: inline-block;
                 padding: 10px 20px;
                 font-size: 30px;
@@ -41,7 +41,7 @@
                 text-transform: uppercase;
                 background: #ffffff;
                 border-radius: 0 10px 10px;
-                box-shadow: 13px 13px 25px #d9d9d9, -13px -13px 25px #ffffff;
+                box-shadow: 13px 13px 25px #e9e9e9, -13px -13px 25px #ffffff;
                 @media (max-width: 1200px) {
                     min-width: auto;
                     margin-bottom: 20px;
@@ -93,13 +93,12 @@
         }
 
         &-right {
-            width: 50%;
+            width: 48%;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             position: relative;
-            align-self: flex-end;
 
             @media (max-width: 1200px) {
                 width: 100%;
@@ -114,7 +113,7 @@
                 font-size: 20px;
                 background: #ffffff;
                 border-radius: 0 10px 10px;
-                box-shadow: 13px 13px 25px #d9d9d9, -13px -13px 25px #ffffff;
+                box-shadow: 13px 13px 25px #e9e9e9, -13px -13px 25px #ffffff;
                 @media (max-width: 768px) {
                     font-size: 16px;
                 }
@@ -137,44 +136,6 @@
                     width: 5px;
                     height: 100%;
                     background-color: rgb(255, 0, 255);
-                }
-            }
-
-            .button-group {
-                display: flex;
-                flex-direction: row;
-
-                @media (max-width: 576px) {
-                    flex-direction: column;
-                }
-
-                .button {
-                    display: inline-block;
-                    min-width: 150px;
-                    padding: 10px 20px;
-                    margin: 20px;
-                    color: #fff;
-                    font-weight: 700;
-                    text-align: center;
-                    border-radius: 10px;
-                    text-transform: capitalize;
-                    background: linear-gradient(145deg, #252525, #2c2c2c);
-                    box-shadow: 6px 6px 13px #d3d3d3, -6px -6px 13px #f3f3f3;
-                    transition: all 0.2s ease-in-out;
-                    @media (max-width: 768px) {
-                        min-width: 100px;
-                        padding: 10px 10px;
-                        margin: 20px;
-                    }
-                    @media (max-width: 576px) {
-                        font-size: 14px;
-                        margin: 20px 0 0 0;
-                    }
-                    &:hover {
-                        background: linear-gradient(145deg, #e6e6e6, #ffffff);
-                        box-shadow: 5px 5px 10px #d9d9d9, -5px -5px 10px #ffffff;
-                        color: #000;
-                    }
                 }
             }
         }
