--- a/PROJECTS/DOCUMENTATION PAGE/assets/css/_contribution.scss
+++ b/PROJECTS/DOCUMENTATION PAGE/assets/css/_contribution.scss
@@ -114,6 +114,9 @@
                 background: #ffffff;
                 border-radius: 0 10px 10px;
                 box-shadow: 13px 13px 25px #e9e9e9, -13px -13px 25px #ffffff;
+                @media (max-width: 1200px) {
+                    margin-bottom: 20px;
+                }
                 @media (max-width: 768px) {
                     font-size: 16px;
                 }
