--- a/PROJECTS/DOCUMENTATION PAGE/assets/css/_document.scss
+++ b/PROJECTS/DOCUMENTATION PAGE/assets/css/_document.scss
@@ -48,6 +48,7 @@
         width: calc(100% - 350px);
 
         @media (max-width: 1100px) {
+            box-shadow: 0px 0px 5px 0.5px rgba(0, 0, 0, 0.2);
             width: 100%;
             height: 60%;
         }
