--- a/PROJECTS/DOCUMENTATION PAGE/assets/css/_homepage.scss
+++ b/PROJECTS/DOCUMENTATION PAGE/assets/css/_homepage.scss
@@ -17,6 +17,8 @@
     }
 
     p {
+        width: 100%;
+        display: inline-block;
         color: #000;
         font-style: italic;
         position: absolute;
@@ -29,8 +31,11 @@
             font-weight: bold;
         }
         @media (max-width: 768px) {
-            font-size: 14px;
-            bottom: 5px;
+            font-size: 12px;
+            bottom: 10px;
+        }
+        @media (max-width: 476px) {
+            font-size: 10px;
         }
     }
 
@@ -59,12 +64,12 @@
                 height: 250px;
             }
             @media (max-width: 768px) {
-                width: 200px;
-                height: 200px;
+                width: 180px;
+                height: 180px;
             }
             @media (max-width: 476px) {
-                width: 160px;
-                height: 160px;
+                width: 120px;
+                height: 120px;
             }
             &__img {
                 width: 80%;
@@ -89,8 +94,11 @@
                 @media (max-width: 1100px) {
                     font-size: 25px;
                 }
-                @media (max-width: 676px) {
-                    font-size: 20px;
+                @media (max-width: 768px) {
+                    font-size: 18px;
+                }
+                @media (max-width: 476px) {
+                    font-size: 14px;
                 }
             }
         }
