--- a/assets/css/_project-modal.scss
+++ b/assets/css/_project-modal.scss
@@ -7,11 +7,11 @@
     height: 100vh;
     z-index: 15;
     display: flex;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(76, 76, 76, 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 100px;
+    padding: 40px;
     border: none;
     outline: none;
     -webkit-backdrop-filter: blur(5px);
@@ -21,28 +21,41 @@
         position: relative;
         width: 100%;
         height: 100%;
+        border: none;
     }
 
     .modal-close {
         display: inline-block;
-        width: 20px;
-        height: 20px;
+        width: 50px;
+        height: 50px;
         position: absolute;
         right: 0;
         top: 0;
+        border-radius: 50%;
         margin-top: 20px;
-        margin-right: 40px;
+        margin-right: 20px;
+        text-align: center;
         font-size: 50px;
         cursor: pointer;
         transition: all 0.1s ease-in-out;
-        color: #fff;
+        color: #767676;
+        z-index: 2;
+        background-color: #fff;
+
+        @media (max-width: 476px) {
+            width: 30px;
+            height: 30px;
+            font-size: 30px;
+            margin-top: 8px;
+            margin-right: 8px;
+        }
 
         &:hover {
-            color: #767676;
+            color: #000;
         }
     }
 
-    @media (max-width: 992px) {
-        padding: 80px 20px;
+    @media (max-width: 476px) {
+        padding: 20px;
     }
 }
