--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -19,7 +19,7 @@
         width: calc(100% - 400px);
         overflow-x: hidden;
         overflow-y: auto;
-        box-shadow: 0px 1px 10px 1px #c9c9c9;
+        box-shadow: 0px 0px 10px 1px #e6e6e6;
         padding: 100px;
         background-color: #f8f8f8;
 
