add project simple-paint-GDI

--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -77,7 +77,9 @@
                         width: 100%;
                         height: 100%;
                         background-color: #fff;
+                        -o-object-fit: cover;
                         object-fit: cover;
+                        -webkit-filter: grayscale(100%);
                         filter: grayscale(100%);
                         transition: transform 0.25s ease-in-out;
                     }
@@ -100,6 +102,9 @@
                     }
                     #loopstudio-page:hover {
                         content: url(../../images/VRPageGIF.gif);
+                    }
+                    #simple-paint:hover {
+                        content: url(../../images/SimplePaintGDIGIF.gif);
                     }
                     #meme-generator:hover {
                         content: url(../../images/memeGenGIF.gif);
