--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -58,8 +58,7 @@ body.dark-mode {
         }
     }
 }
-
-.button-darkmode {
+z .button-darkmode {
     outline: none;
     border: none;
     background-color: transparent;
